fix: title length of pages

--- a/example/storybook/src/components/Feedback/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Alert/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Alert | gluestack-UI
+title: Different Variants of Alert Component - Gluestack UI
 description: Alert component is used to create clickable elements that perform an action when pressed.
 pageTitle: Alert
 pageDescription: Alert component is used to create clickable elements that perform an action when pressed.
