--- a/example/storybook/src/components/Feedback/Progress/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Progress/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Progress | gluestack-UI
+title: Easily create a horizontal stack layout with VStack | GlueStack UI
 description: This is a generic component for low level layout needs. It is similar to a div in HTML.
 pageTitle: Progress
 pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
