--- a/example/storybook/src/components/Layout/Box/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Box/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Box | gluestack-UI
+title: Box Component for Low-Level Layout Needs | Installation, API, Examples
 description: This is a generic component for low level layout needs. It is similar to a div in HTML.
 pageTitle: Box
 pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
