--- a/example/storybook/src/components/Layout/HStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/HStack/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: HStack | gluestack-UI
+title: Learn about the HStack component for horizontal stack layout in React Native.
 description: A HStack component is used to create a horizontal stack layout for child components.
 pageTitle: HStack
 pageDescription: A HStack component is used to create a horizontal stack layout for child components.
