--- a/example/storybook/src/components/Layout/VStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/VStack/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: VStack | gluestack-UI
+title: VStack Component for Horizontal Stack Layout - Installation, Anatomy, and API Reference
 description: A VStack component is used to create a horizontal stack layout for child components.
 pageTitle: VStack
 pageDescription: A VStack component is used to create a horizontal stack layout for child components.
