--- a/example/storybook/src/components/MediaAndIcons/Image/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Image/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Image | gluestack-UI
+title: Easily Add and Style Images with gluestack-UI Image Component
 description: The Image component allows one to display images.
 pageTitle: Image
 pageDescription: The Image component allows one to display images.
