--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Popover | gluestack-UI
+title: Gluestack UI Popover Component: Installation, API Reference, and Customization
 description: Popover floats around a trigger. It is a non-modal dialog used to provide contextual information to the user. It should be paired with a pressable trigger element.
 pageTitle: Popover
 pageDescription: Popover floats around a trigger. It is a non-modal dialog used to provide contextual information to the user. It should be paired with a pressable trigger element.
