--- a/example/storybook/src/components/Forms/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Switch/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Switch | gluestack-UI
+title: Install GlueStack UI Switch component with npx and use it in your project
 description: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
 pageTitle: Switch
 pageDescription: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
