--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction | gluestack-ui
-description: Gluestack-ui is a React Native and React library that provides universal, unstyled, and accessible components. It includes keyboard accessibility and focus management features, making it a great choice for developers who prioritize accessibility and usability.
+description: Gluestack-ui is a React Native and React library that provides universal, styled, and accessible components. It includes keyboard accessibility and focus management features, making it a great choice for developers who prioritize accessibility and usability.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
@@ -9,22 +9,22 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Introduction
 
-gluestack-ui is a React library of universal, unstyled, and accessible components, designed for easy integration into web and mobile applications. With keyboard accessibility and focus management features, it's a great choice for developers who prioritize accessibility and usability.
+gluestack-ui is a universal(react and react-native) library that gives styled and accessible components, designed for easy integration into web and mobile applications. With keyboard accessibility and focus management features, it's a great choice for developers who prioritize accessibility and usability.
 
-We believe that creating accessible and user-friendly user interfaces should be easy for developers. However, we noticed that many existing UI libraries require a lot of customization to meet accessibility standards and often lack the performance required for mobile applications. To address this, we built gluestack-ui, a library of universal, unstyled, and accessible components that can be easily customized and integrated into any web or mobile application.
+We believe that creating accessible and user-friendly user interfaces should be easy for developers. However, we noticed that many existing UI libraries require a lot of customization to meet accessibility standards and often lack the performance required for mobile applications. To address this, we built gluestack-ui, a library of universal, styled, and accessible components that can be easily customized and integrated into any web or mobile application.
 
 ## Why we built gluestack-ui?
 
 gluestack-ui originally started as part of NativeBase, a universal component library for both React and React Native. However, we realized that not everyone needs all the components from NativeBase, so we broke it down into three separate libraries:
 
 - [dank.style](https://dank.style) - The high-performing and universal CSS-in-JS library.
-- [ui.gluestack.io](https://ui.gluestack.io) - Universal, unstyled, and accessible components that adds accessibility to low-level [dank.style](https://dank.style) components or any component with the same prop type. You can even customize the components as desired.
+- [ui.gluestack.io](https://ui.gluestack.io) - Universal, styled, and accessible components that adds accessibility to low-level [dank.style](https://dank.style) components or any component with the same prop type. You can even customize the components as desired.
 
 ## But aren’t React Native and React Native Web sufficient?
 
 gluestack-ui and React Native Web aren’t directly comparable as they are different.
 
-While React Native and React Native Web can be used to create cross-platform applications, they require developers to write platform-specific code and to customize their components for accessibility and performance. gluestack-ui provides a different approach by offering a set of universal, unstyled, and accessible components that work seamlessly on both web and mobile platforms.
+While React Native and React Native Web can be used to create cross-platform applications, they require developers to write platform-specific code and to customize their components for accessibility and performance. gluestack-ui provides a different approach by offering a set of universal, styled, and accessible components that work seamlessly on both web and mobile platforms.
 
 By using gluestack-ui, developers can create accessible and user-friendly interfaces with a consistent design language without worrying about the underlying platform. The focus on accessibility and performance means that developers can achieve a high level of usability with minimal effort.
 
