--- a/example/storybook/src/components/Feedback/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Toast/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: React Native Toast Component: Installation, Usage, and API Reference
+title: React Native Toast Component | Installation, Usage, and API Reference
 description: Toast displays alerts on top of an overlay.
 pageTitle: Toast
 pageDescription: Toast displays alerts on top of an overlay.
