--- a/example/storybook/src/components/Forms/Link/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Link/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Link Component: Installation, Usage, API Reference, and Examples
+title: Link Component | Installation, Usage, API Reference, and Examples
 description: Links are accessible elements used primarily for navigation. This component is styled to resemble a hyperlink.
 pageTitle: Link
 pageDescription: Links are accessible elements used primarily for navigation. This component is styled to resemble a hyperlink.
