feat: title fixed

--- a/example/storybook/src/components/Overlay/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Modal/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Gluestack UI Modal Installation: Add Modal to your project
+title: Gluestack UI Modal Installation | Add Modal to your project
 description: A Modal component is used to create clickable elements that perform an action when pressed.
 pageTitle: Modal
 pageDescription: A Modal component is used to create clickable elements that perform an action when pressed.
