--- a/example/storybook/src/components/Forms/Input/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Input/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Basic Usage: Creating Simple Clickable Elements with Gluestack UI Input Component
+title: Basic Usage | Creating Simple Clickable Elements with Gluestack UI Input Component
 description: A Input component is used to create clickable elements that perform an action when pressed.
 pageTitle: Input
 pageDescription: A Input component is used to create clickable elements that perform an action when pressed.
