--- a/example/storybook/src/components/Forms/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/Forms/TextArea/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Gluestack UI: How to Install, Use, and Customize the TextArea Component
+title: Gluestack UI | How to Install, Use, and Customize the TextArea Component
 description: A TextArea component is used to create clickable elements that perform an action when pressed.
 pageTitle: TextArea
 pageDescription: A TextArea component is used to create clickable elements that perform an action when pressed.
