--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -143,7 +143,7 @@ To use the ins
 
 This will render a button component that can be clicked and will display an alert when clicked.
 
-### For Next.js Projects
+# For Next.js Projects
 
 It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your \_document.js file. So, for nextjs projects we require `@gluestack/ui-next-adapter` as a dependency and update \_document.js with below code:
 
