feat: corrected titles and description

--- a/example/storybook/src/components/DataDisplay/Badge/index.stories.mdx
+++ b/example/storybook/src/components/DataDisplay/Badge/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Badge | gluestack-UI
-description: A badge component is a small graphic element used to display information such as status, count, or achievement in software/web development.
+title: gluestack-ui Badge Component | Installation, Usage, and API
+description: Badges allow the highlighting of an item’s status. This provides quick recognition.
 pageTitle: Badge
-pageDescription: A badge component is a small graphic element used to display information such as status, count, or achievement in software/web development.
+pageDescription: Badges allow the highlighting of an item’s status. This provides quick recognition.
 showHeader: true
 ---
 
