--- a/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Actionsheet | gluestack-UI
-description: A Actionsheet component is used to create clickable elements that perform an action when pressed.
+title: gluestack-ui Actionsheet Component | Installation, Usage, and API
+description: An Actionsheet is a dialog that displays a set of options. It appears on top of the app's content.
 pageTitle: Actionsheet
-pageDescription: A Actionsheet component is used to create clickable elements that perform an action when pressed.
+pageDescription: An Actionsheet is a dialog that displays a set of options. It appears on top of the app's content.
 showHeader: true
 ---
 
