--- a/example/storybook/src/components/Feedback/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Alert/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Different Variants of Alert Component - Gluestack UI
-description: Alert component is used to create clickable elements that perform an action when pressed.
+title: gluestack-ui Slider Alert | Installation, Usage, and API
+description: Alerts convey a state that can influence a system, feature, or page.
 pageTitle: Alert
-pageDescription: Alert component is used to create clickable elements that perform an action when pressed.
+pageDescription: Alerts convey a state that can influence a system, feature, or page.
 showHeader: true
 ---
 
