--- a/example/storybook/src/components/Feedback/Progress/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Progress/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Easily create a horizontal stack layout with VStack | GlueStack UI
-description: This is a generic component for low level layout needs. It is similar to a div in HTML.
+title: gluestack-ui Progress Component | Installation, Usage, and API
+description: Progress helps show the progress status for a time-consuming task that consists of several steps.
 pageTitle: Progress
-pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
+pageDescription: Progress helps show the progress status for a time-consuming task that consists of several steps.
 showHeader: true
 ---
 
