--- a/example/storybook/src/components/Forms/Pressable/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Pressable/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Flexible button interactions with Pressable components in React Native using gluestack UI
+title: gluestack-ui Pressable Component | Installation, Usage, and API
 description: Pressable is a lower level primitive if you need more flexibility than a button and access to hover, pressed and focus events.
 pageTitle: Pressable
 pageDescription: Pressable is a lower level primitive if you need more flexibility than a button and access to hover, pressed and focus events.
