--- a/example/storybook/src/components/Forms/Select/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Select/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Documentation for gluestack-UI Select Component
+title: gluestack-ui Select Component | Installation, Usage, and API
 description: Select creates a dropdown list of items with the selected item in closed view.
 pageTitle: Select
 pageDescription: Select creates a dropdown list of items with the selected item in closed view.
