--- a/example/storybook/src/components/Forms/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Slider/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Create a Custom Slider Component with gluestack UI Slider
-description: This is a generic component for low level layout needs. It is similar to a div in HTML.
+title: gluestack-ui Slider Component | Installation, Usage, and API
+description: The Slider allows users to select options from a given range of values.
 pageTitle: Slider
-pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
+pageDescription: The Slider allows users to select options from a given range of values.
 showHeader: true
 ---
 
