--- a/example/storybook/src/components/Forms/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/Forms/TextArea/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Gluestack UI | How to Install, Use, and Customize the TextArea Component
-description: A TextArea component is used to create clickable elements that perform an action when pressed.
+title: gluestack-ui TextArea Component | Installation, Usage, and API
+description: The Textarea component helps create multi-line text inputs.
 pageTitle: TextArea
-pageDescription: A TextArea component is used to create clickable elements that perform an action when pressed.
+pageDescription: The Textarea component helps create multi-line text inputs.
 showHeader: true
 ---
 
