--- a/example/storybook/src/components/Layout/Center/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Center/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Center | A component to center its children - Gluestack UI
-description: This is a generic component for low level layout needs to center its children
+title: gluestack-ui Center Component | Installation, Usage, and API
+description: Center aligns its contents to the center within itself. It is a layout component.
 pageTitle: Center
-pageDescription: This is a generic component for low level layout needs to center its children.
+pageDescription: Center aligns its contents to the center within itself. It is a layout component..
 showHeader: true
 ---
 
