--- a/example/storybook/src/components/Layout/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Divider/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Add Divider Component to Your Project with Gluestack UI
+title: gluestack-ui Divider Component | Installation, Usage, and API
 description: Divider can visually separate content in a given list or group.
 pageTitle: Divider
 pageDescription: Divider can visually separate content in a given list or group.
