--- a/example/storybook/src/components/Layout/HStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/HStack/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Learn about the HStack component for horizontal stack layout in React Native.
-description: A HStack component is used to create a horizontal stack layout for child components.
+title: gluestack-ui HStack Component | Installation, Usage, and API
+description: HStack aligns items horizontally. Row is also an alias for HStack.
 pageTitle: HStack
-pageDescription: A HStack component is used to create a horizontal stack layout for child components.
+pageDescription: HStack aligns items horizontally. Row is also an alias for HStack.
 showHeader: true
 ---
 
