--- a/example/storybook/src/components/Layout/VStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/VStack/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: VStack Component for Horizontal Stack Layout - Installation, Anatomy, and API Reference
-description: A VStack component is used to create a horizontal stack layout for child components.
+title: gluestack-ui VStack Component | Installation, Usage, and API
+description: VStack aligns items vertically. Column is also an alias for VStack.
 pageTitle: VStack
-pageDescription: A VStack component is used to create a horizontal stack layout for child components.
+pageDescription: VStack aligns items vertically. Column is also an alias for VStack.
 showHeader: true
 ---
 
