--- a/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: AlertDialog | gluestack-UI
-description: A AlertDialog component is used to create clickable elements that perform an action when pressed.
+title: gluestack-ui AlertDialog Component | Installation, Usage, and API
+description: AlertDialog is used when a user needs to be interrupted with a mandatory confirmation or call-to-action.
 pageTitle: AlertDialog
-pageDescription: A AlertDialog component is used to create clickable elements that perform an action when pressed.
+pageDescription: AlertDialog is used when a user needs to be interrupted with a mandatory confirmation or call-to-action.
 showHeader: true
 ---
 
