--- a/example/storybook/src/components/Overlay/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Modal/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Gluestack UI Modal Installation | Add Modal to your project
-description: A Modal component is used to create clickable elements that perform an action when pressed.
+title: gluestack-ui Modal Component | Installation, Usage, and API
+description: A modal is a dialog that focuses the user's attention exclusively on an information via a window that is overlaid on primary content.
 pageTitle: Modal
-pageDescription: A Modal component is used to create clickable elements that perform an action when pressed.
+pageDescription: A modal is a dialog that focuses the user's attention exclusively on an information via a window that is overlaid on primary content.
 showHeader: true
 ---
 
