--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Gluestack UI Popover Component | Installation, API Reference, and Customization
-description: Popover floats around a trigger. It is a non-modal dialog used to provide contextual information to the user. It should be paired with a pressable trigger element.
+title: gluestack-ui Popover Component | Installation, Usage, and API
+description: Popover is a non-modal dialog that floats around a trigger.
 pageTitle: Popover
-pageDescription: Popover floats around a trigger. It is a non-modal dialog used to provide contextual information to the user. It should be paired with a pressable trigger element.
+pageDescription: Popover is a non-modal dialog that floats around a trigger.
 showHeader: true
 ---
 
