--- a/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Easily create tooltips with GlueStack UI's Tooltip component
+title: gluestack-ui Tooltip Component | Installation, Usage, and API
 description: A tooltip component in React is a customizable UI element that provides additional info when users interact with it.
 pageTitle: Tooltip
 pageDescription: Tooltip component is a customizable UI element that displays additional info when users interact with it, enhancing UX.
