--- a/example/storybook/src/components/Provider/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/Provider/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Provider | gluestack-UI
-description: This is a generic component for low level layout needs. It is similar to a div in HTML.
+title: gluestack-ui Provider Component | Installation, Usage, and API
+description: Provider component that can be used to configure the library. It consists of StyledProvider, OverlayProvider and ToastProvider internally.
 pageTitle: Provider
-pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
+pageDescription: Provider component that can be used to configure the library. It consists of StyledProvider, OverlayProvider and ToastProvider internally.
 showHeader: true
 ---
 
