--- a/example/storybook/src/components/Typography/Text/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Text/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
-title: Text | gluestack-UI
-description: Text allows the rendering of text and paragraphs within an interface
+title: gluestack-ui Text Component | Installation, Usage, and API
+description: Text allows the rendering of text and paragraphs within an interface.
 pageTitle: Text
 pageDescription: Text allows the rendering of text and paragraphs within an interface.
 showHeader: true
