--- a/example/storybook/src/getting-started/SSR/index.stories.mdx
+++ b/example/storybook/src/getting-started/SSR/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: SSR | gluestack-ui
-description: Gluestack-ui components can be rendered on the server.
+description: gluestack-ui components can be rendered on the server.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
