--- a/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Add Visual Feedback with a Spinner Component | Installation and Usage
+title: gluestack-ui Spinner Component | Installation, Usage, and API
 description: Spinners gives visual cues to actions that are processing or awaiting a course change or results.
 pageTitle: Spinner
 pageDescription: Spinners gives visual cues to actions that are processing or awaiting a course change or results.
