--- a/example/storybook/src/components/Forms/Button/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Button/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Button Component | Create Clickable Elements for Your Project - gluestack UI
-description: A Button component is used to create clickable elements that perform an action when pressed.
+title: gluestack-ui Button Component | Installation, Usage, and API
+description: The Button component triggers an event or an action.
 pageTitle: Button
-pageDescription: A Button component is used to create clickable elements that perform an action when pressed.
+pageDescription: The Button component triggers an event or an action.
 showHeader: true
 ---
 
