--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Checkbox Component - Installation, API Reference, Examples
-description: A Checkbox component is used to provide a way for users to select one or more options from a set of predefined choices.
+title: gluestack-ui Checkbox Component | Installation, Usage, and API
+description: The Checkbox component allows a user to select multiple values from various options in a form.
 pageTitle: Checkbox
-pageDescription: A Checkbox component is used to provide a way for users to select one or more options from a set of predefined choices.
+pageDescription: The Checkbox component allows a user to select multiple values from various options in a form.
 showHeader: true
 ---
 
