--- a/example/storybook/src/components/Forms/Input/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Input/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Basic Usage | Creating Simple Clickable Elements with Gluestack UI Input Component
-description: A Input component is used to create clickable elements that perform an action when pressed.
+title: gluestack-ui Input Component | Installation, Usage, and API
+description: The Input component allows a user to provide input in a text field.
 pageTitle: Input
-pageDescription: A Input component is used to create clickable elements that perform an action when pressed.
+pageDescription: The Input component allows a user to provide input in a text field.
 showHeader: true
 ---
 
