--- a/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Examples of Using Avatar Component | Sizes and Avatar Group
-description: Use the Avatar Component as a graphical representation of a person through a profile picture or image, an icon, or a string with initials.
+title: gluestack-ui Avatar Component | Installation, Usage, and API
+description: The Avatar component can display profile pictures, initials, or a fallback icon to represent a user.
 pageTitle: Avatar
-pageDescription: Use the Avatar Component as a graphical representation of a person through a profile picture or image, an icon, or a string with initials.
+pageDescription: The Avatar component can display profile pictures, initials, or a fallback icon to represent a user.
 showHeader: true
 ---
 
