--- a/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Gluestack UI Icon Component | Accessible, Customizable, and Feature-rich
-description: Icon component is used to create an icon in React Native. In React Native, the Icon component can be generated using a third-party accessibility-focused library that uses 'styled views' and 'svg' to define the layout, visual design, and behavior of the component.
+title: gluestack-ui Icon Component | Installation, Usage, and API
+description: An icon component is a reusable visual element used in software development to represent an object, action, or idea in a user interface.
 pageTitle: Icon
-pageDescription: Icon component is used to create an icon in React Native. In React Native, the Icon component can be generated using a third-party accessibility-focused library that uses 'styled views' and 'svg' to define the layout, visual design, and behavior of the component.
+pageDescription: An icon component is a reusable visual element used in software development to represent an object, action, or idea in a user interface.
 showHeader: true
 ---
 
