--- a/example/storybook/src/components/MediaAndIcons/Image/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Image/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Easily Add and Style Images with gluestack-UI Image Component
+title: gluestack-ui Image Component | Installation, Usage, and API
 description: The Image component allows one to display images.
 pageTitle: Image
 pageDescription: The Image component allows one to display images.
