--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Add Fab to Your Universal Project with Gluestack UI
+title: gluestack-ui Fab Component | Installation, Usage, and API
 description: A floating action button (FAB) is a circular icon button that hovers over content to execute a primary action in the application.
 pageTitle: Fab
 pageDescription: A floating action button (FAB) is a circular icon button that hovers over content to execute a primary action in the application.
