--- a/example/storybook/src/components/Overlay/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Menu/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Gluestack UI Menu Component | Installation, Usage, API Reference
-description: A Menu component is used to create clickable elements that perform an action when pressed.
+title: gluestack-ui Menu Component | Installation, Usage, and API
+description: Menu generates an accessible dropdown and can be used to display a list of actionable items.
 pageTitle: Menu
-pageDescription: A Menu component is used to create clickable elements that perform an action when pressed.
+pageDescription: Menu generates an accessible dropdown and can be used to display a list of actionable items.
 showHeader: true
 ---
 
