--- a/example/storybook/src/components/Typography/Heading/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Heading/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
-title: Heading | gluestack-UI
-description: This is a generic component for low level layout needs. It is similar to a div in HTML.
+title: gluestack-ui Heading Component | Installation, Usage, and API
+description: Heading component gives you the ability to create headings for your page with different sizes and symantics from h1 to h6.
 pageTitle: Heading
-pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
+pageDescription: Heading component gives you the ability to create headings for your page with different sizes and symantics from h1 to h6.
 showHeader: true
 ---
 
