--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction | gluestack-ui
-description: Gluestack-ui is a React Native and React library that provides universal, styled, and accessible components. It includes keyboard accessibility and focus management features, making it a great choice for developers who prioritize accessibility and usability.
+description: gluestack-ui is a React Native and React library that provides universal, styled, and accessible components. It includes keyboard accessibility and focus management features, making it a great choice for developers who prioritize accessibility and usability.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
